--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@monaco-editor/react": "^4.5.1",
     "@mui/material": "^5.12.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.4.0",
+    "monaco-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^9.1.3",
+    "typescript": "^5.1.6",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
