--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
     "react-syntax-highlighter": "^15.5.0",
-    "react-toastify": "^9.1.3",
-    "typescript": "^5.1.6",
-    "web-vitals": "^2.1.0"
+    "react-toastify": "^9.1.3"
   },
   "scripts": {
     "predeploy": "npm run build",
